--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,4 @@
 export(build_weather_station_path)
 export(build_weather_station_url)
 export(load_weather_station_raw_data)
+export(load_weather_stations_raw_data)
