[weathr - version 0.3.10] The addition of clustering with alternative feature sets.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,24 @@ export(question_1a_008_charts_cluster_k2_latitude_longitude_hours_sun)
 export(question_1a_008_charts_cluster_k2_latitude_longitude_rain)
 export(question_1a_008_charts_cluster_k2_latitude_longitude_temp_max)
 export(question_1a_008_charts_cluster_k2_latitude_longitude_temp_min)
-export(question_1a_009_charts_cluster_k3_latitude_longitude_hours_sun)
-export(question_1a_009_charts_cluster_k3_latitude_longitude_rain)
-export(question_1a_009_charts_cluster_k3_latitude_longitude_temp_max)
-export(question_1a_009_charts_cluster_k3_latitude_longitude_temp_min)
+export(question_1a_010_charts_box_whisker)
+export(question_1a_010_charts_box_whisker_hours_sun)
+export(question_1a_010_charts_box_whisker_rain_mm)
+export(question_1a_010_charts_box_whisker_temp_max)
+export(question_1a_010_charts_box_whisker_temp_min)
+export(question_1a_010_charts_map)
+export(question_1b_001_kmeans)
+export(question_1b_002_charts_sum_squares)
+export(question_1c_001_kmeans)
+export(question_1c_002_charts_sum_squares)
+export(question_1d_001_kmeans)
+export(question_1d_002_charts_sum_squares)
+export(question_1e_001_kmeans)
+export(question_1e_002_charts_sum_squares)
+export(question_1e_003_charts_cluster_k2_latitude_longitude_hours_sun)
+export(question_1e_003_charts_cluster_k2_latitude_longitude_rain)
+export(question_1e_003_charts_cluster_k2_latitude_longitude_temp_max)
+export(question_1e_003_charts_cluster_k2_latitude_longitude_temp_min)
 export(stage_000)
 export(stage_010)
 export(stage_011)
