[weathr - version 0.3.11] - Part complete script, 'qesution-1b-001-data', which will remove outliers.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(question_1a_010_charts_box_whisker_rain_mm)
 export(question_1a_010_charts_box_whisker_temp_max)
 export(question_1a_010_charts_box_whisker_temp_min)
 export(question_1a_010_charts_map)
+export(question_1b_001_data)
 export(question_1b_001_kmeans)
 export(question_1b_002_charts_sum_squares)
 export(question_1c_001_kmeans)
