--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(question_1b_08_charts_cluster_k3_latitude_longitude_hours_sun)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_rain_mm)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_temp_max)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_temp_min)
+export(question_2a_001_data)
 export(stage_000)
 export(stage_010)
 export(stage_011)
