[weathr - version 0.3.14] The addition of 3d charts describing the newly added 'latitude_category' feature.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,10 @@ export(question_1b_08_charts_cluster_k3_latitude_longitude_rain_mm)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_temp_max)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_temp_min)
 export(question_2a_001_data)
+export(question_2a_002_charts_latitude_longitude_hours_sun)
+export(question_2a_002_charts_latitude_longitude_rain)
+export(question_2a_002_charts_latitude_longitude_temp_max)
+export(question_2a_002_charts_latitude_longitude_temp_min)
 export(stage_000)
 export(stage_010)
 export(stage_011)
