[weathr - version 0.3.15] The addition of a function to split the data into 'training' and 'test' subsets.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(question_2a_002_charts_latitude_longitude_hours_sun)
 export(question_2a_002_charts_latitude_longitude_rain)
 export(question_2a_002_charts_latitude_longitude_temp_max)
 export(question_2a_002_charts_latitude_longitude_temp_min)
+export(question_2a_003_split)
 export(stage_000)
 export(stage_010)
 export(stage_011)
