--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(question_2a_002_charts_latitude_longitude_rain)
 export(question_2a_002_charts_latitude_longitude_temp_max)
 export(question_2a_002_charts_latitude_longitude_temp_min)
 export(question_2a_003_split)
+export(question_2a_004_knn)
 export(stage_000)
 export(stage_010)
 export(stage_011)
