[weathr - version 0.4.0] The addition of 'question 2a' pairwise and corelation charts. Also, the inclusion of .lintr.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,8 +41,10 @@ export(question_2a_002_charts_latitude_longitude_hours_sun)
 export(question_2a_002_charts_latitude_longitude_rain)
 export(question_2a_002_charts_latitude_longitude_temp_max)
 export(question_2a_002_charts_latitude_longitude_temp_min)
-export(question_2a_003_split)
-export(question_2a_004_knn)
+export(question_2a_003_charts_pairwise)
+export(question_2a_004_charts_correlation)
+export(question_2a_004_split)
+export(question_2a_005_knn)
 export(stage_000)
 export(stage_010)
 export(stage_011)
