[weathr - version 0.4.2] The complete of the data generation for question 3a.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,8 @@ export(question_2a_003_charts_pairwise)
 export(question_2a_004_charts_correlation)
 export(question_2a_004_split)
 export(question_2a_005_knn)
+export(question_3a_001_data_weather)
+export(question_3a_002_data_join)
 export(stage_000)
 export(stage_010)
 export(stage_011)
