[weathr - version 0.4.4] The inclusion of an initial version of the 'regression' calculation, along with an updated version of 'generate_latitude_charts_with_cluster_colour'.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(question_2a_004_split)
 export(question_2a_005_knn)
 export(question_3a_001_data_weather)
 export(question_3a_002_data_join)
+export(question_3a_004_regression)
 export(stage_000)
 export(stage_010)
 export(stage_011)
