[weathr - version 0.4.6] The addition of k-means density estimations. However, they may not be correct.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,10 @@ export(question_1b_08_charts_cluster_k3_latitude_longitude_hours_sun)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_rain_mm)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_temp_max)
 export(question_1b_08_charts_cluster_k3_latitude_longitude_temp_min)
+export(question_1c_001_density_estimation)
+export(question_1c_002_density_summary)
+export(question_1c_003_charts_density_bic)
+export(question_1c_004_charts_density_contour)
 export(question_2a_001_data)
 export(question_2a_002_charts_latitude_longitude_hours_sun)
 export(question_2a_002_charts_latitude_longitude_rain)
