[weathr - version 0.4.6] The addition of a hierarchical cluster.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(question_1c_001_density_estimation)
 export(question_1c_002_density_summary)
 export(question_1c_003_charts_density_bic)
 export(question_1c_004_charts_density_contour)
+export(question_1d_001_hierarchical)
 export(question_2a_001_data)
 export(question_2a_002_charts_latitude_longitude_hours_sun)
 export(question_2a_002_charts_latitude_longitude_rain)
