[pids.wellbeing.weather] Version 0.5.2. The addition of question_1_003_tech_correct_weather_dsv.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(question_1_001_raw_data)
 export(question_1_002_tech_correct_weather_txt)
+export(question_1_003_tech_correct_weather_dsv)
 export(question_1a_001_data)
 export(question_1a_002_charts_latitude)
 export(question_1a_003_charts_latitude_longitude_hours_sun)
@@ -57,7 +58,6 @@ export(question_3a_004_regression_model)
 export(question_3a_005_regression_summary)
 export(question_3a_006_regression_test)
 export(question_3a_007_charts_predicted_happiness_by_weather_station)
-export(stage_011)
 export(stage_012)
 export(stage_013)
 export(stage_014)
