--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(question_1_001_raw_data)
 export(question_1_002_tech_correct_weather_txt)
 export(question_1_003_tech_correct_weather_dsv)
+export(question_1_004_tech_correct_weather_df)
+export(question_1_005_tech_corr_weather_complete)
+export(question_1_006_tech_corr_weather_single_df)
 export(question_1a_001_data)
 export(question_1a_002_charts_latitude)
 export(question_1a_003_charts_latitude_longitude_hours_sun)
@@ -58,7 +61,4 @@ export(question_3a_004_regression_model)
 export(question_3a_005_regression_summary)
 export(question_3a_006_regression_test)
 export(question_3a_007_charts_predicted_happiness_by_weather_station)
-export(stage_012)
-export(stage_013)
-export(stage_014)
 export(stage_015)
