[pids.wellbeing.weather] Change kmeans to kmediods. Also, add .latex.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,7 @@ export(question_1_017_cluster_tendency)
 export(question_1_018_algorithm_choice)
 export(question_1_019)
 export(question_1_020)
-export(question_1_021_kmeans)
+export(question_1_021_kmediods)
 export(question_1_022_charts_sum_squares)
 export(question_1_025_charts_cluster_k2_latitude_longitude_hours_sun)
 export(question_1_025_charts_cluster_k2_latitude_longitude_rain)
