[pids.wellbeing.weather] Version 0.5.7. The addition of k-mediods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,21 +20,11 @@ export(question_1_014_eda_charts_latitude_longitude_rain_mm)
 export(question_1_015_eda_charts_latitude_longitude_max_temp)
 export(question_1_016_eda_charts_latitude_longitude_min_temp)
 export(question_1_017_cluster_tendency)
-export(question_1_018_algorithm_choice)
-export(question_1_019)
-export(question_1_020)
-export(question_1_021_kmediods)
-export(question_1_022_charts_sum_squares)
-export(question_1_025_charts_cluster_k2_latitude_longitude_hours_sun)
-export(question_1_025_charts_cluster_k2_latitude_longitude_rain)
-export(question_1_025_charts_cluster_k2_latitude_longitude_temp_max)
-export(question_1_025_charts_cluster_k2_latitude_longitude_temp_min)
-export(question_1_026_charts_cluster_k3_latitude_longitude_hours_sun)
-export(question_1_026_charts_cluster_k3_latitude_longitude_rain_mm)
-export(question_1_026_charts_cluster_k3_latitude_longitude_temp_max)
-export(question_1_026_charts_cluster_k3_latitude_longitude_temp_min)
-export(question_1b_005_charts_cluster_k2_latitude)
-export(question_1b_006_charts_cluster_k3_latitude)
+export(question_1_018_vat_charts)
+export(question_1_019_k_choice)
+export(question_1_020_algorithm_choice)
+export(question_1_021_cluster)
+export(question_1_022_silhouette)
 export(question_2a_001_data)
 export(question_2a_002_charts_latitude_longitude_hours_sun)
 export(question_2a_002_charts_latitude_longitude_rain)
