[pids.wellbeing.weather] Version 0.5.10. The inclusion of a k-means 'sum of squares' chart, along with small lint related fixes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(question_1_020_prep_k_choice)
 export(question_1_021_prep_algorithm_choice)
 export(question_1_022_analysis_hierarchical)
 export(question_1_023_analysis_kmeans)
+export(question_1_024_analysis_charts_sum_squares)
 export(question_2a_001_data)
 export(question_2a_002_charts_latitude_longitude_hours_sun)
 export(question_2a_002_charts_latitude_longitude_rain)
