--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,15 @@ Package: pids.wellbeing.weather
 Title: Practical Introduction to Data Science: Wellbing Weather
 Authors@R: person("Joe", "Strachan", email = "s1888637@ed.ac.uk",
                   role = c("aut", "cre"))
-Version: 0.6.0
+Version: 0.7.0
 Description: An R based project for Assessment 3 from Practical Introduction to Data Science, University of Edinburgh, Scotland.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.2
 Depends:
-    R (>= 2.15),
+    R (>= 2.15)
+Imports:
     class,
     cluster,
     clValid,
