[pids.wellbeing.weather] Version 0.7.4. Update Roxygen comments.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(question_1_003_svc_tech_weather_dsv)
 export(question_1_004_svc_tech_weather_df)
 export(question_1_005_svc_tech_weather_complete)
 export(question_1_006_svc_tech_weather_single_df)
+export(question_1_007_svc_cons_summary)
+export(question_1_007_svc_cons_summary_latex)
 export(question_1_008_svc_cons_grouped_data)
 export(question_1_009_svc_cons_grouped_data_summary)
 export(question_1_010_eda_charts_box_whisker_hours_sun)
